--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+
+<!--
+Author:  Mohammad Alabed
+Class:   Web & Distributed Programming
+Project: Map Mania v1
+Description: Version 1 of map mania, the lite version.
+-->
+
 <html lang="en">
     <head>
         <meta charset="UTF-8">
